--- a/backend-1/package.json
+++ b/backend-1/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Altheeiya/Telco-Product-Recomendation-Offer-Based-on-Customer-Behaviour#readme",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -26,7 +27,6 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
-    "pg": "^8.16.3",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
